--- a/views/footer.twig
+++ b/views/footer.twig
@@ -5,9 +5,10 @@
 		<div class="ftr-mod">
 			<div class="ftr-logo-mod ui-block-1">
 				<h5 class="ftr-h1">Bikes Fight Cancer</h5>
+                <h5 class="ftr-h2">We'd love to hear from you!</h5>
 				{{ footer.footer.post_content }}
                 <div class="fb-box-mod">
-                    <h5 class="fb-like-h">Like us on Facebook!</h5>
+                    <h5 class="ftr-h2">Like us on Facebook!</h5>
                     <div class="fb-like-box" data-href="https://www.facebook.com/bikesfightcancer" data-width="250" data-show-faces="false" data-colorscheme="dark" data-stream="false" data-show-border="false" data-header="false">
                     </div><!-- /fb-like-box -->
                 </div><!-- /fb-box-mod -->
