--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -17,13 +17,26 @@
 		</div><!-- /page-mod -->	
 	</section><!-- /page-sub-intro -->	
 
+
+	<section class="raffle-sub-txt">
+		<div class="page-mod">
+			<div class="raffle-ui-group">
+				<div class="raffle-sub-txt-mod ui-block-1">
+					<h4 class="section-h1">How the Raffle Works</h4>
+						{{post.info}}
+				</div><!-- /raffle-sub-txt-mod -->
+				<div class="raffle-shirt-modz ui-block-2">
+					<img class="raffle-shirt" src="{{post.shirt.url}}" />
+				</div><!-- /raffle-shirt-mod -->
+			</div><!-- /raffle-ui-group -->	
+		</div><!-- /page-mod -->	
+	</section><!-- /raffle-sub-txt -->
+
 	<section class="raffle-list">
 		<div class="page-mod"> 
 			<div class="raffle-list-mod"> 
-
-				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-raffle.png">
+				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-raffle.png" />
 				<h4 class="section-h1">The 2013 Raffle</h4>
-
 				<div class="raffle-content">
 					{{post.winners}}
 				</div>
