fixing type style on raffle page

--- a/src/style.scss
+++ b/src/style.scss
@@ -1294,6 +1294,12 @@ a.history-link-mod {
 	}
 }
 
+.raffle-sub-txt-mod {
+
+		font: 20px/160% $freight-txt;
+	
+}
+
 .raffle-ui-group {
 	max-width: 1200px;
 	margin: 0 auto;
