--- a/style.css
+++ b/style.css
@@ -2217,12 +2217,17 @@ a.history-link-mod {
 }
 
 /* line 1297, src/style.scss */
+.raffle-sub-txt-mod {
+  font: 20px/160% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
+}
+
+/* line 1303, src/style.scss */
 .raffle-ui-group {
   max-width: 1200px;
   margin: 0 auto;
 }
 @media (min-width: 800px) {
-  /* line 1297, src/style.scss */
+  /* line 1303, src/style.scss */
   .raffle-ui-group {
     *zoom: 1;
   }
@@ -2252,32 +2257,32 @@ a.history-link-mod {
 /* ============================================= */
 /*	Store	    						   		 */
 /* ============================================= */
-/* line 1312, src/style.scss */
+/* line 1318, src/style.scss */
 .closed-store {
   background: url(/wp-content/themes/spokes/images/bg-hatch.png) 50% 50%;
 }
 
-/* line 1316, src/style.scss */
+/* line 1322, src/style.scss */
 .closed-sign-mod {
   max-width: 620px;
   width: 100%;
   margin: 0 auto;
   padding-top: 0px;
 }
-/* line 1322, src/style.scss */
+/* line 1328, src/style.scss */
 .closed-sign-mod img {
   max-width: 600px;
   width: 100%;
 }
 @media (min-width: 700px) {
-  /* line 1316, src/style.scss */
+  /* line 1322, src/style.scss */
   .closed-sign-mod {
     padding-top: 90px;
     padding-bottom: 50px;
   }
 }
 
-/* line 1333, src/style.scss */
+/* line 1339, src/style.scss */
 .store-closed {
   text-align: center;
   font: 800 20px/130% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
@@ -2287,7 +2292,7 @@ a.history-link-mod {
 /* ============================================= */
 /*	Blog-Post   						   		 */
 /* ============================================= */
-/* line 1346, src/style.scss */
+/* line 1352, src/style.scss */
 .bfc-404 {
   padding: 0% 0%;
   background: url(/wp-content/themes/spokes/images/bfc-404.jpg) no-repeat center center;
@@ -2299,7 +2304,7 @@ a.history-link-mod {
   position: relative;
 }
 
-/* line 1357, src/style.scss */
+/* line 1363, src/style.scss */
 .txt-mod-404 {
   text-align: left;
   background-color: #000;
@@ -2315,7 +2320,7 @@ a.history-link-mod {
   max-width: 500px;
 }
 
-/* line 1368, src/style.scss */
+/* line 1374, src/style.scss */
 .h1-404 {
   font: 800 48px/120% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   color: #fff;
@@ -2324,7 +2329,7 @@ a.history-link-mod {
   letter-spacing: 1px;
 }
 
-/* line 1376, src/style.scss */
+/* line 1382, src/style.scss */
 .txt-404 {
   font: 22px/148% "freight-text-pro" "Roboto Slab", Georgia, Times, "Times New Roman", serif;
   color: #ddd;
@@ -2333,19 +2338,19 @@ a.history-link-mod {
 /* ============================================= */
 /*	Footer	    						   		 */
 /* ============================================= */
-/* line 1390, src/style.scss */
+/* line 1396, src/style.scss */
 footer {
   background-color: #1D1D1D;
   margin: 0 auto;
 }
 
-/* line 1395, src/style.scss */
+/* line 1401, src/style.scss */
 .ftr-mod {
   margin: 0 auto;
   max-width: 1200px;
 }
 @media (min-width: 1000px) {
-  /* line 1395, src/style.scss */
+  /* line 1401, src/style.scss */
   .ftr-mod {
     *zoom: 1;
   }
@@ -2372,31 +2377,31 @@ footer {
   }
 }
 
-/* line 1405, src/style.scss */
+/* line 1411, src/style.scss */
 .ftr-logo-mod {
   margin-bottom: 50px;
 }
 
-/* line 1409, src/style.scss */
+/* line 1415, src/style.scss */
 .ftr-logo {
   max-width: 300px;
   width: 100%;
   margin-bottom: 25px;
 }
 
-/* line 1415, src/style.scss */
+/* line 1421, src/style.scss */
 .contact-li-item {
   color: #eee;
   font: 400 16px/160% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
 }
-/* line 1419, src/style.scss */
+/* line 1425, src/style.scss */
 .contact-li-item a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1422, src/style.scss */
+/* line 1428, src/style.scss */
 .contact-li-item a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2405,7 +2410,7 @@ footer {
   color: #555;
 }
 
-/* line 1429, src/style.scss */
+/* line 1435, src/style.scss */
 .sponsors {
   background-color: #f5f5f3;
   margin: 0 auto;
@@ -2413,7 +2418,7 @@ footer {
   border-top: 1px solid;
   border-color: #eee;
 }
-/* line 1436, src/style.scss */
+/* line 1442, src/style.scss */
 .sponsors .sponsors-mod {
   *zoom: 1;
   text-align: left;
@@ -2442,7 +2447,7 @@ footer {
   margin-right: 0;
 }
 @media (min-width: 700px) {
-  /* line 1436, src/style.scss */
+  /* line 1442, src/style.scss */
   .sponsors .sponsors-mod {
     *zoom: 1;
   }
@@ -2468,13 +2473,13 @@ footer {
     margin-right: 0;
   }
 }
-/* line 1447, src/style.scss */
+/* line 1453, src/style.scss */
 .sponsors .section-h1 {
   color: #000;
   text-align: left;
   margin-bottom: 30px;
 }
-/* line 1453, src/style.scss */
+/* line 1459, src/style.scss */
 .sponsors .sponsors-list-mod {
   -webkit-columns: 1;
   -moz-columns: 1;
@@ -2483,14 +2488,14 @@ footer {
   columns: 1;
   margin-bottom: 25px;
 }
-/* line 1457, src/style.scss */
+/* line 1463, src/style.scss */
 .sponsors .sponsors-list-mod a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1460, src/style.scss */
+/* line 1466, src/style.scss */
 .sponsors .sponsors-list-mod a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2499,13 +2504,13 @@ footer {
   color: #bada55;
 }
 @media (min-width: 600px) {
-  /* line 1453, src/style.scss */
+  /* line 1459, src/style.scss */
   .sponsors .sponsors-list-mod {
     margin-bottom: 0px;
   }
 }
 @media (min-width: 900px) {
-  /* line 1453, src/style.scss */
+  /* line 1459, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 2;
     -moz-columns: 2;
@@ -2515,7 +2520,7 @@ footer {
   }
 }
 @media (min-width: 1200px) {
-  /* line 1453, src/style.scss */
+  /* line 1459, src/style.scss */
   .sponsors .sponsors-list-mod {
     -webkit-columns: 3;
     -moz-columns: 3;
@@ -2524,13 +2529,13 @@ footer {
     columns: 3;
   }
 }
-/* line 1479, src/style.scss */
+/* line 1485, src/style.scss */
 .sponsors .sponsor-list-item {
   font: 400 18px/175% "freight-sans-pro", "PT Sans", "Helvetica Neue", Arial, Helvetica, Verdana, sans-serif;
   text-align: left;
 }
 
-/* line 1485, src/style.scss */
+/* line 1491, src/style.scss */
 .sponsors-ul {
   display: inline-block;
   margin-right: 10%;
@@ -2538,12 +2543,12 @@ footer {
   text-align: left;
   vertical-align: top;
 }
-/* line 1492, src/style.scss */
+/* line 1498, src/style.scss */
 .sponsors-ul:last-child {
   margin-right: 0px;
 }
 
-/* line 1497, src/style.scss */
+/* line 1503, src/style.scss */
 .ftr-logo-bike {
   max-width: 160px;
   width: 100%;
@@ -2554,13 +2559,13 @@ footer {
   position: relative;
 }
 @media (min-width: 700px) {
-  /* line 1497, src/style.scss */
+  /* line 1503, src/style.scss */
   .ftr-logo-bike {
     display: block;
   }
 }
 
-/* line 1511, src/style.scss */
+/* line 1517, src/style.scss */
 .mailing-list-mod {
   max-width: 540px;
   width: 100%;
@@ -2570,18 +2575,18 @@ footer {
   background-size: 150px, 100%;
 }
 @media (min-width: 700px) {
-  /* line 1511, src/style.scss */
+  /* line 1517, src/style.scss */
   .mailing-list-mod {
     max-height: 228px;
     height: 228px;
   }
 }
-/* line 1526, src/style.scss */
+/* line 1532, src/style.scss */
 .mailing-list-mod #mce-EMAIL, .mailing-list-mod #mc-embedded-subscribe {
   height: 32px;
   margin-bottom: 12px;
 }
-/* line 1531, src/style.scss */
+/* line 1537, src/style.scss */
 .mailing-list-mod #mce-EMAIL {
   border-color: #eee;
   -webkit-border-radius: 5px;
@@ -2594,14 +2599,14 @@ footer {
   border-bottom-color: #ddd;
   width: 229px;
 }
-/* line 1540, src/style.scss */
+/* line 1546, src/style.scss */
 .mailing-list-mod #mc-embedded-subscribe {
   width: 105px;
   letter-spacing: 1px;
   padding: 0px 2px 0px 2px;
 }
 
-/* line 1548, src/style.scss */
+/* line 1554, src/style.scss */
 .mailing-list-mod:before {
   height: 8px;
   content: '';
@@ -2615,7 +2620,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1561, src/style.scss */
+/* line 1567, src/style.scss */
 .mailing-list-mod:after {
   height: 8px;
   content: '';
@@ -2629,7 +2634,7 @@ footer {
   background-size: 540px;
 }
 
-/* line 1574, src/style.scss */
+/* line 1580, src/style.scss */
 .site-credit {
   background-color: #2A2B2A;
   color: #fff;
@@ -2639,14 +2644,14 @@ footer {
   letter-spacing: 1px;
   text-align: center;
 }
-/* line 1583, src/style.scss */
+/* line 1589, src/style.scss */
 .site-credit a {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
 }
-/* line 1586, src/style.scss */
+/* line 1592, src/style.scss */
 .site-credit a:hover {
   -webkit-transition: all 0.2s ease-in;
   -moz-transition: all 0.2s ease-in;
@@ -2655,7 +2660,7 @@ footer {
   color: #bada55;
 }
 
-/* line 1599, src/style.scss */
+/* line 1605, src/style.scss */
 .fb-box-mod {
   margin-top: 30px;
 }
@@ -2663,12 +2668,12 @@ footer {
 /* ============================================= */
 /*	Special FX    						   		 */
 /* ============================================= */
-/* line 1609, src/style.scss */
+/* line 1615, src/style.scss */
 .card-effect {
   position: relative;
 }
 
-/* line 1613, src/style.scss */
+/* line 1619, src/style.scss */
 .card-effect:before, .card-effect:after {
   z-index: -1;
   position: absolute;
@@ -2689,7 +2694,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1627, src/style.scss */
+/* line 1633, src/style.scss */
 .card-effect:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -2700,12 +2705,12 @@ footer {
   left: auto;
 }
 
-/* line 1633, src/style.scss */
+/* line 1639, src/style.scss */
 .card-effect-lg {
   position: relative;
 }
 
-/* line 1637, src/style.scss */
+/* line 1643, src/style.scss */
 .card-effect-lg:before, .card-effect-lg:after {
   z-index: -1;
   position: absolute;
@@ -2726,7 +2731,7 @@ footer {
   transform: rotate(-3deg);
 }
 
-/* line 1651, src/style.scss */
+/* line 1657, src/style.scss */
 .card-effect-lg:after {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
