--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -25,7 +25,7 @@
 					<h4 class="section-h1">How the Raffle Works</h4>
 						{{post.info}}
 				</div><!-- /raffle-sub-txt-mod -->
-				<div class="raffle-shirt-modz ui-block-2">
+				<div class="raffle-shirt-mod ui-block-2">
 					<img class="raffle-shirt" src="{{post.shirt.url}}" />
 				</div><!-- /raffle-shirt-mod -->
 			</div><!-- /raffle-ui-group -->	
