fixed styling on about page. cleaned up scss file

--- a/src/project/_variables.scss
+++ b/src/project/_variables.scss
@@ -104,7 +104,7 @@ $serif: $bt-serif, Georgia, Times, "Times New Roman", serif;
 $mono: "Courier New", Courier, mono;
 
 $freight-sans: 'freight-sans-pro', $sans;
-$freight-txt:  'freight-text-pro' $serif;
+$freight-txt:  'freight-text-pro', $serif;
 $giza: 'Giza Five Five', $sans;
 
 
