--- a/views/page-raffle.twig
+++ b/views/page-raffle.twig
@@ -33,7 +33,7 @@
 	</section><!-- /raffle-sub-txt -->
 
 	<section class="raffle-list">
-		<div class="page-mod"> 
+		<div class="page-mod raffle-winners"> 
 			<div class="raffle-list-mod"> 
 				<img class="section-icon" src="/wp-content/themes/spokes/images/icon-raffle.png" />
 				<h4 class="section-h1">The 2013 Raffle</h4>
