--- a/views/html-header.twig
+++ b/views/html-header.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-<!--[if IEMobile 7 ]><html class="no-js iem7" manifest="default.appcache?v=1"><![endif]--> 
-<!--[if lt IE 7 ]><html class="no-js ie6" lang="en"><![endif]--> 
-<!--[if IE 7 ]><html class="no-js ie7" lang="en"><![endif]--> 
-<!--[if IE 8 ]><html class="no-js ie8" lang="en"><![endif]--> 
+<!--[if IEMobile 7 ]><html class="no-js ie7 lt-ie9" manifest="default.appcache?v=1"><![endif]--> 
+<!--[if lt IE 7 ]><html class="no-js ie6 lt-ie9" lang="en"><![endif]--> 
+<!--[if IE 7 ]><html class="no-js ie7 lt-ie9" lang="en"><![endif]--> 
+<!--[if IE 8 ]><html class="no-js ie8 lt-ie9" lang="en"><![endif]--> 
 <!--[if (gte IE 9)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 	<head>
 		<title>{{wp_title}}</title>
@@ -11,6 +11,9 @@
 		<meta charset="UTF-8" />
 	  	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- Remove if you're not building a responsive site. (But then why would you do such a thing?) -->
+		<!--[if lt IE 9]>
+     		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 		<link rel="pingback" href="/xmlrpc.php" />
 		<script type="text/javascript" src="//use.typekit.net/kbo7gam.js"></script>
 		<link href="//cloud.webtype.com/css/8d31e9e6-df9a-4d18-871e-1bb1769b9c2e.css" rel="stylesheet" type="text/css" />		
