--- a/views/tease-blog.twig
+++ b/views/tease-blog.twig
@@ -1,9 +1,11 @@
-<article class="blog-post-tz card-effect">						
-	<div class="post-date">{{ post.post_date | date('n.j.y') }}</div>
-	<!-- <div class="post-date-mod"></div> -->
-	<div class="tz-content-mod">
-		<h5 class="tz-h1"><a href="{{post.permalink}}">{{ post.post_title }}</a></h5>
-		<div class="byline">By Mike</div>
-		<p class="tz-txt">{{ post.get_preview(40) }}</p>
-	</div><!-- /tz-content-mod -->	
+<article class="blog-post-tz card-effect">	
+	<div class="blog-post-tz-mod">					
+		<div class="post-date">{{ post.post_date | date('n.j.y') }}</div>
+		<!-- <div class="post-date-mod"></div> -->
+		<div class="tz-content-mod">
+			<h5 class="tz-h1"><a href="{{post.permalink}}">{{ post.post_title }}</a></h5>
+			<div class="byline">Need to hook up author here...</div>
+			<p class="tz-txt">{{ post.get_preview(40) }}</p>
+		</div><!-- /tz-content-mod -->	
+	</div><!-- /blog-post-tz-mod -->	
 </article><!-- /blog-post -->
