--- a/src/style.scss
+++ b/src/style.scss
@@ -218,8 +218,9 @@ em   	{	font-style: italic;	}
 	font: 800 18px/125% $freight-sans;
 	text-transform: uppercase;
 	color: #555;
-	margin-bottom: 25px;
+	margin-bottom: 18px;
 	letter-spacing: 1px;
+	padding-top: 5px;
 }
 
 .email-h1 {
