--- a/views/page-history.twig
+++ b/views/page-history.twig
@@ -6,7 +6,7 @@
 			<h1 class="intro-h1 home-intro">History</h1>
 			<img class="intro-stars" src="/wp-content/themes/spokes/images/intro-stars.png" />			
 			<h2 class="intro-h2">{{post.intro}}</h2>
-			<a class="btn btn-donate">Make History</a>
+			<a href="http://www2.pmc.org/profile/TP0083" target="_blank" class="btn btn-donate">Make History</a>
 	</section><!-- /page-intro -->	
 
 	<section class="history-list-mod">
