--- a/views/footer.twig
+++ b/views/footer.twig
@@ -30,7 +30,7 @@
 		</div><!-- /ftr-mod -->	
 	</div><!-- /page-mod -->
 	<div class="site-credit">
-		<a href="http://www.upstatement.com" target="_blank">Site by Upstatement</a>
+		<a href="http://www.upstatement.com" target="_blank">Site Design and Sponsorship: Upstatement</a>
 	</div><!-- /site-credit -->	
 </footer>
 
