fixing padding on blog tz's

--- a/src/style.scss
+++ b/src/style.scss
@@ -850,7 +850,7 @@ em   	{	font-style: italic;	}
 }
 
 .tz-content-mod {
-	padding: 20px;
+	padding: 20px 20px 30px 20px;
 	background-color: #fff;
 }
 
