--- a/style.css
+++ b/style.css
@@ -1747,7 +1747,7 @@ em {
 
 /* line 852, src/style.scss */
 .tz-content-mod {
-  padding: 20px;
+  padding: 20px 20px 30px 20px;
   background-color: #fff;
 }
 
