fixing raffle-name / prize border color

--- a/src/style.scss
+++ b/src/style.scss
@@ -635,14 +635,14 @@ em   	{	font-style: italic;	}
 .raffle-name-mod {
 	position: relative;
 	border-bottom: 3px solid;
-	border-color: $bfc-gold-dark;
+	border-color: #776848;
 	margin-bottom: 80px;
 }
 
 .raffle-prize-mod {
 	position: relative;
 	border-bottom: 3px solid;
-	border-color: $bfc-gold-dark;
+	border-color: #776848;
 }
 
 .raffle-name-title, .raffle-prize-title {
